# libnyquist

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark_constant.sh  build.sh  run_benchmark.py
.github/workflows/: cmake-single-platform.yml
cuda/: CMakeLists.txt  fft.cu  mdct_cuda.cu  mdct_cuda.hpp  mdct_cuda_b8.cu  mdct_test.cu  test.cpp
examples/src/: AudioFile.h  Main.cpp
include/libnyquist/: Decoders.h
src/: Common.cpp  OpusDependencies.c
test_data/: RachelReadme.txt  sb-reverie-60ms-frames.opus  sb-reverie.opus  short.opus
